[SAU-1656] Fixing an issue with legend alignment.

--- a/app/styles/spatial-catch.scss
+++ b/app/styles/spatial-catch.scss
@@ -272,6 +272,7 @@
   .legend-column {
     padding-bottom: 10px;
     padding-right: 3px;
+    height: 85px;
   }
 
   #taxonDistributionInput {
